--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "xmonad"]
 	path = xmonad
-	url = https://github.com/xmonad/xmonad
+	url = git@github.com:ivanbrennan/xmonad.git
 [submodule "xmonad-contrib"]
 	path = xmonad-contrib
 	url = https://github.com/xmonad/xmonad-contrib
